# routes/swagger.js
@@ -2,7 +2,7 @@ const router = require("express").Router();
 const swaggerUi = require("swagger-ui-express");
 const swaggerFile = require("../swagger.json");
 
-router.use("/api-doc", swaggerUi.serve);
-router.get("/api-doc", swaggerUi.setup(swaggerFile));
+// Serve Swagger UI directly at "/"
+router.use("/", swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 module.exports = router;
